--- a/src/app/pages/inventory-overview-asm1/inventory-overview-asm1.component.html
+++ b/src/app/pages/inventory-overview-asm1/inventory-overview-asm1.component.html
@@ -75,6 +75,13 @@
             <i class="material-icons">assessment</i>
             Compare LinkQ
           </a>
+          
+          <div class="dropdown-divider"></div>
+          
+          <a class="dropdown-item" href="javascript:void(0)" (click)="exportToExcel()">
+            <i class="material-icons">file_download</i>
+            Export Excel
+          </a>
         </div>
       </div>
       
